--- a/drawing_library/drawing_library.vcxproj.filters
+++ b/drawing_library/drawing_library.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="helpers\math\math.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="drawing\drawing.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="helpers\math\math.hpp" />
